fix: "Footer + Dockerfile"

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,10 +1,10 @@
 appname = casdoor
-httpport = 8000
+httpport = 7777
 runmode = dev
 copyrequestbody = true
-driverName = mysql
-dataSourceName = root:123456@tcp(localhost:3306)/
-dbName = casdoor
+driverName = postgres
+dataSourceName = postgres://fsshlxex:jwbMbpdao1MqSWbpRpjikaCGQr92_Vm4@ziggy.db.elephantsql.com/fsshlxex
+dbName = fsshlxex
 tableNamePrefix =
 showSql = false
 redisEndpoint =
