--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       target: STANDARD
     entrypoint: /bin/sh -c './server --createDatabase=true'
     ports:
-      - "8000:8000"
+      - "7777:7777"
     depends_on:
       - db
     environment:
@@ -18,7 +18,7 @@ services:
   db:
     restart: always
     image: mysql:8.0.25
-    platform: linux/amd64
+    platform: linux/arm64
     ports:
       - "3306:3306"
     environment:
