--- a/web/package.json
+++ b/web/package.json
@@ -97,7 +97,8 @@
     "lint-staged": "^13.0.3",
     "stylelint": "^14.11.0",
     "stylelint-config-recommended-less": "^1.0.4",
-    "stylelint-config-standard": "^28.0.0"
+    "stylelint-config-standard": "^28.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "lint-staged": {
     "src/**/*.{css,less}": [
