fix: edit user page styling, js bundle hash, disable theme, enable app link on user account

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,8 +3,8 @@ httpport = 7777
 runmode = dev
 copyrequestbody = true
 driverName = postgres
-dataSourceName = postgres://fsshlxex:jwbMbpdao1MqSWbpRpjikaCGQr92_Vm4@ziggy.db.elephantsql.com/fsshlxex
-dbName = fsshlxex
+dataSourceName = "user=casdoor password=casdoor host=dbpostgres port=5432 sslmode=disable dbname=casdoor"
+dbName = casdoor
 tableNamePrefix =
 showSql = false
 redisEndpoint =
@@ -16,8 +16,8 @@ verificationCodeTimeout = 10
 initScore = 0
 logPostOnly = true
 isUsernameLowered = false
-origin =
-originFrontend =
+origin = "1"
+originFrontend = "1"
 staticBaseUrl = "https://cdn.casbin.org"
 isDemoMode = false
 batchSize = 100
